k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proyecto06
  labels:
    name: proyecto06
