k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proyecto06-ingress
  namespace: proyecto06
  annotations:
    # Configuración para AWS Load Balancer Controller
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: proyecto06
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          # Reglas para el Backend (API y Docs)
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          # Regla por defecto para el Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
